--- a/app/views/products.hbs
+++ b/app/views/products.hbs
@@ -6,13 +6,12 @@
 </head>
 
 <body>
-<h2>Dashboard</h2>
-<h5>Hiiiii!!! you are logged in.</h5>
+<h2>products</h2>
+<h5>product list:</h5>
 
 <form id="dashboard" name="dashboard" method="post" action="dashboard">
 
     <input class="btn" type="submit" value="logout" name="logout"/>
-    <input class="btn" type="submit" value="products" name="products"/>
 
 </form>
 
